--- a/0-index.html
+++ b/0-index.html
@@ -5,12 +5,12 @@
 	</head>
 
 	<body>
-		<header style="color: FF0000; height: 70px; width: 100%">
+		<header style="background-color: #FF0000; height: 70px; width: 100%">
 
 		</header>
 
-		<footer style="color: 00FF00; height: 60px; width: 100%;">
-			<span style="text-align: center">Holberton School</span>
+		<footer style="background-color: #00FF00; height: 60px; width: 100%;position: absolute; bottom: 0;text-align: center; line-height: 60px">
+			<span style="display: inline-block;">Holberton School</span>
 		</footer>
 	</body>
 </html>
