--- a/web_static/2-index.html
+++ b/web_static/2-index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="EN">
 	<head>
+		<title>AirBnB clone</title>
 		<meta charset="utf-8">
 		<link href="styles/2-common.css" rel="stylesheet">
 		<link href="styles/2-header.css" rel="stylesheet">
