--- a/web_static/4-index.html
+++ b/web_static/4-index.html
@@ -4,8 +4,8 @@
 		<title>AirBnB clone</title>
 		<meta charset="utf-8">
 		<link href="styles/4-common.css" rel="stylesheet">
-		<link href="styles/4-header.css" rel="stylesheet">
-		<link href="styles/4-footer.css" rel="stylesheet">
+		<link href="styles/3-header.css" rel="stylesheet">
+		<link href="styles/3-footer.css" rel="stylesheet">
 		<link href="styles/4-filters.css" rel="stylesheet">
 		<link rel="icon" href="images/icon.png" type='image/x-icon'>
 		<link rel="shortcut icon" href="images/icon.png" type='image/x-icon'>
@@ -18,7 +18,7 @@
 		<div class='container'>
 			<section class='filters'>
 				<button>
-					Seearch
+					Search
 				</button>
 			</section>
 		</div>
